--- a/projects/swimlane/ngx-charts/package.json
+++ b/projects/swimlane/ngx-charts/package.json
@@ -45,17 +45,18 @@
     "rxjs": "^6.5.3 || ^7.4.0"
   },
   "dependencies": {
-    "d3-array": "^2.9.1",
-    "d3-brush": "^2.1.0",
+    "d3-array": "^3.1.1",
+    "d3-brush": "^3.0.0",
     "d3-color": "^3.1.0",
-    "d3-format": "^2.0.0",
-    "d3-hierarchy": "^2.0.0",
-    "d3-interpolate": "^2.0.1",
-    "d3-scale": "^3.2.3",
-    "d3-selection": "^2.0.0",
-    "d3-shape": "^2.0.0",
+    "d3-ease": "^3.0.1",
+    "d3-format": "^3.1.0",
+    "d3-hierarchy": "^3.1.0",
+    "d3-interpolate": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
     "d3-time-format": "^3.0.0",
-    "d3-transition": "^2.0.0",
+    "d3-transition": "^3.0.1",
     "rfdc": "^1.3.0",
     "tslib": "^2.0.0"
   },
