--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "d3-format": "^3.1.0",
     "d3-hierarchy": "^3.1.0",
     "d3-interpolate": "^3.0.1",
+    "d3-sankey": "^0.12.3",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
