--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@swimlane/ngx-ui": "^35.6.5",
+    "ajv": "^8.12.0",
     "codemirror": "^5.49.2",
     "d3-array": "^3.1.1",
     "d3-brush": "^3.0.0",
