--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -7,10 +7,10 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
+    - uses: actions/setup-node@v3
       with:
-        node-version: 12.x
-
+        node-version: 20.11.x
     - name: Install
       uses: bahmutov/npm-install@v1
 
@@ -25,7 +25,7 @@ jobs:
         npm run ci --if-present
       env:
         CI: true
-        
+
     - name: Prepare and deploy
       run: |
         npm run deploy -- --name="Swimlane" --email="swimlane-devops@swimlane.com"
