--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
     "fix:lint": "ng lint --fix"
   },
   "dependencies": {
-    "@angular/animations": "^15.2.9",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "^15.2.9",
-    "@angular/compiler": "^15.2.9",
-    "@angular/core": "^15.2.10",
-    "@angular/forms": "^15.2.9",
-    "@angular/platform-browser": "^15.2.9",
-    "@angular/platform-browser-dynamic": "^15.2.9",
-    "@angular/router": "^15.2.9",
-    "@swimlane/ngx-ui": "^44.4.0",
-    "ajv": "6.12.6",
+    "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
+    "@swimlane/ngx-ui": "^47.0.0",
+    "ajv": "^6.12.6",
     "codemirror": "^5.65.0",
     "d3-array": "^3.2.0",
     "d3-brush": "^3.0.0",
@@ -62,18 +62,18 @@
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~7.5.5",
     "tslib": "^2.4.0",
-    "zone.js": "0.12.0"
+    "zone.js": "0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.10",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "^15.2.10",
-    "@angular/compiler-cli": "^15.2.9",
-    "@angular/language-service": "^15.2.9",
+    "@angular-devkit/build-angular": "^16.2.11",
+    "@angular-eslint/builder": "16.3.1",
+    "@angular-eslint/eslint-plugin": "16.3.1",
+    "@angular-eslint/eslint-plugin-template": "16.3.1",
+    "@angular-eslint/schematics": "16.3.1",
+    "@angular-eslint/template-parser": "16.3.1",
+    "@angular/cli": "^16.2.11",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/language-service": "^16.2.12",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/d3-array": "^3.0.3",
@@ -87,12 +87,12 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/json-schema": "^7.0.11",
     "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "5.59.5",
-    "@typescript-eslint/parser": "5.59.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "angular-cli-ghpages": "^1.0.3",
     "codelyzer": "^6.0.2",
     "cross-env": "^7.0.2",
-    "eslint": "^8.28.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-security": "^1.5.0",
     "jasmine-core": "~4.2.0",
@@ -102,7 +102,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^15.2.2",
+    "ng-packagr": "^16.2.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "protractor": "~7.0.0",
@@ -111,6 +111,6 @@
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-security": "^1.16.0",
     "tslint-config-swimlane": "^5.0.0",
-    "typescript": "4.9.5"
+    "typescript": "5.1.6"
   }
 }
