--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@angular/platform-browser-dynamic": "^17.2.1",
     "@angular/router": "^17.2.1",
     "@swimlane/ngx-ui": "^47.0.0",
-    "ajv": "^6.12.6",
+    "ajv": "8.12.0",
     "codemirror": "^5.65.0",
     "d3-array": "^3.2.0",
     "d3-brush": "^3.0.0",
