--- a/projects/swimlane/ngx-charts/tsconfig.lib.json
+++ b/projects/swimlane/ngx-charts/tsconfig.lib.json
@@ -6,7 +6,7 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [],
+    "types": []
   },
   "exclude": ["src/test.ts", "**/*.spec.ts"]
 }
