--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "d3-shape": "^3.2.0",
     "d3-time-format": "^3.0.0",
     "d3-transition": "^3.0.1",
+    "d3-zoom": "^3.0.0",
     "emoji-flags": "^1.2.0",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.40",
@@ -91,6 +92,7 @@
     "@types/d3-selection": "^2.0.0",
     "@types/d3-shape": "^2.1.0",
     "@types/d3-transition": "^2.0.0",
+    "@types/d3-zoom": "^3.0.8",
     "@types/jasmine": "^3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/json-schema": "^7.0.4",
