--- a/package.json
+++ b/package.json
@@ -66,11 +66,9 @@
     "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1802.11",
+    "@angular-devkit/architect": "^0.900.0",
     "@angular-devkit/build-angular": "~18.2.0",
     "@angular-devkit/build-ng-packagr": "0.1002.0",
-    "@angular-devkit/core": "~18.2.0",
-    "@angular-devkit/schematics": "~18.2.0",
     "@angular-eslint/builder": "~18.2.0",
     "@angular-eslint/eslint-plugin": "^18.4.0",
     "@angular-eslint/eslint-plugin-template": "^18.4.0",
@@ -106,7 +104,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "~18.2.0",
+    "ng-packagr": "^18.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "protractor": "~7.0.0",
