--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -8,27 +8,36 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          node-version: 20.x
 
-      - name: Install
-        uses: bahmutov/npm-install@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.17.0
+
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Install Yarn
+        run: corepack prepare yarn@4.5.1 --activate
+
+      - name: Install dependencies
+        run: yarn install --immutable
 
       - name: Build
         run: |
-          npm run build
+          yarn build
         env:
           CI: true
 
       - name: Test
         run: |
-          npm run ci --if-present
+          yarn ci --if-present
         env:
           CI: true
 
       - name: Prepare and deploy
         run: |
-          npm run deploy -- --name="Swimlane" --email="swimlane-devops@swimlane.com"
+          yarn deploy -- --name="Swimlane" --email="swimlane-devops@swimlane.com"
         if: ${{ github.ref == 'refs/heads/master' }}
         env:
           CI: true
