--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Prepare and deploy
         run: |
-          yarn deploy -- --name="Swimlane" --email="swimlane-devops@swimlane.com"
+          npm run deploy -- --name="Swimlane" --email="swimlane-devops@swimlane.com"
         if: ${{ github.ref == 'refs/heads/master' }}
         env:
           CI: true
